@@ -2,8 +2,10 @@ Release ...
 * troff: The ".trimat", ".bleedat, and ".cropat" " requests have been added
   to include advice about the "TrimBox", "BleedBox", and "CropBox" page
   parameters to a PDF distiller command, particularly for PDF/X generation.
-* dpost: The "-M" option has been added. It causes cut marks to be printed
-  when used in combination with the ".trimat" troff request.
+* dpost: The "-M" option has been added. It can be used to print cut marks
+  ("-M cut"), registration marks ("-M registration"), or both cut marks and
+  registration marks ("-M cut:registration") in combination with the
+  ".trimat" troff request.
 * [nt]roff: The ".af" request now handles long register names correctly.
 * troff: Kerning now works correctly in combination with leaders and
   fields.
